--- a/templates/about.html
+++ b/templates/about.html
@@ -24,11 +24,11 @@
             h2 {
                 color: #57b1dc;
                 
-                font-size: 125%;
+                font-size: 150%;
             }
 
             p {
-                font-size: 125%;
+                font-size: 150%;
             }
 
             li {
@@ -61,28 +61,17 @@
             <img src='{{ url_for('static',filename='JHV head shot 00 - 170907 - 500k.jpg')}}' alt="JH Viljoen"
             height="182" width="123"> 
 
-            <p>This app has been developed by Johannes Henning Viljoen (MBA, M.Eng).  He can be reached 
-                through his personal website: <a href="http://stratlytic.com">http://stratlytic.com</a>.</p>
-
-            
-
-            <p>For many people, investing outside their home countries, is something they do not know much about, but they would like 
-                to be able to put some of their savings in off-shore markets.  Not knowing where to put the funds, and what the 
-                options are, are often hurdles to investing abroad. </p>
-
-            <p>Our goal is to open up the opaqueness of foreign investment, and to do so using Artifial Intelligence (AI).  Cutting edge 
-                Machine Learning and Data Science techniques can extract value from the large volumes of data from the markets 
-                much better than humans can, and in the process AI can maximize return, and minimize risk given the investor's risk 
-                appetite.
+            <p>This app has been developed by J. Henning Viljoen (MBA, M.Eng).  For the content just presented, and more information
+                on the data science and methodology, please visit the app at  
+                <a href="http://henningviljoen.pythonanywhere.com/">http://henningviljoen.pythonanywhere.com/</a>.
             </p>
-            
-            <p>Data from the last couple of decades indicates that most active management portfolio managers do not beat the S&P500 
-                index when measured over a 10 year period.  As a minimum, the index has been doing very well, and also offers a natural 
-                risk hedge since many securities are invested in.  This argument is extended by our app by investing in off-shore indeces 
-                for each country's stock exchange that is included in the hyperspace to be optimized.  
-
-            <p>The hyperspace to be optimized is characterized by this loss function to be minimized: 
-                PortfolioRiskReturnBalance = w<sup>T</sup>Ew - qRw.</p>
+                
+            <p>Henning spent a number of years working in the oil, gas, and telecommunications industries in South Africa, 
+                Nigeria, Sudan and Qatar in the Arabian Gulf.  He completed a Masters in Electrical Engineering, an MBA, and is 
+                 almost finished with his PhD in Electrical Engineering.  Most of his working experience and PhD research 
+                 is in control theory & optimization, and its applications.  </p>
+                 
+            <p>He can be reached through his personal website: <a href="http://stratlytic.com">http://stratlytic.com</a>.</p>
 
             
 
