--- a/templates/pitch2.html
+++ b/templates/pitch2.html
@@ -59,7 +59,7 @@
                 <li><h4>International investment advisor through Machine Learning.</h4></li> <br>
                 <li><h4>Inference of risk - correlated and independent between assets.</h4></li> <br>
                 <li><h4>Inference of return on investment for each asset.</h4></li> <br>
-                <li><h4>Opmization of utility function for distribution between markets - 
+                <li><h4>Optimization of utility function for distribution between markets - 
                     minimal risk, maximum return, given a risk tolerance.</h4></li> <br>
             </ul>      
             
