--- a/templates/appindex.html
+++ b/templates/appindex.html
@@ -62,6 +62,24 @@
         </h2>
         <p>We use Airtifical Intelligence to <em>maximize</em> your return, <em>minimize</em> your risk, and invest in 40 countries 
             across the globe for your particular <em>risk</em> profile.</p>
+
+            <p>For many people, investing outside their home countries, is something they do not know much about, but they would like 
+                to be able to put some of their savings in off-shore markets.  Not knowing where to put the funds, and what the 
+                options are, are often hurdles to investing abroad. </p>
+
+            <p>Our goal is to open up the opaqueness of foreign investment, and to do so using Artifial Intelligence (AI).  Cutting edge 
+                Machine Learning and Data Science techniques can extract value from the large volumes of data from the markets 
+                much better than humans can, and in the process AI can maximize return, and minimize risk given the investor's risk 
+                appetite.
+            </p>
+            
+            <p>Data from the last couple of decades indicates that most active management portfolio managers do not beat the S&P500 
+                index when measured over a 10 year period.  As a minimum, the index has been doing very well, and also offers a natural 
+                risk hedge since many securities are invested in.  This argument is extended by our app by investing in off-shore indeces 
+                for each country's stock exchange that is included in the hyperspace to be optimized.  
+
+            <p>The hyperspace to be optimized is characterized by this loss function to be minimized: 
+                PortfolioRiskReturnBalance = w<sup>T</sup>Ew - qRw.</p>
       
 
         <footer>
